# keylogger

./: .gitignore  CMakeLists.txt  CleanupManager.cpp  CleanupManager.h  FileOutput.cpp  FileOutput.h  KeyloggerCore.cpp  KeyloggerCore.h  LogFormatter.cpp  LogFormatter.h  README.md  TrayIconManager.cpp  TrayIconManager.h  ghostly-log.cpp  ghostly-log.sln  ghostly-log.vcxproj  ghostly-log.vcxproj.filters  keylogger.bat  keylogger.py  keylogger.rc  logger.py  resource.h  test.py  ui.py  winmain.cpp
